fixed the crew grid on small desktop resolution (about 45-60rem)

--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@
   :root {
       /* font-sizes */
       --fs-800: 6.25rem;
-      --fs-700: 3.5rem;
+      --fs-700: 3rem;
       --fs-600: 2rem;
       --fs-500: 1.75rem;
       --fs-400: 1.125rem;
@@ -98,8 +98,7 @@ body {
 }
 
 /* make images easier to work with */
-img,
-picutre {
+img {
   max-width: 100%;
   display: block;
 }
@@ -478,19 +477,29 @@ body {
 /* crew */
 .crew {
   background-image: url(./assets/home/background-crew-mobile.jpg);
+  overflow-y: hidden;
 }
+
 
 @media (min-width: 35rem) {
   .crew {
       background-position: center center;
       background-image: url(./assets/crew/background-crew-tablet.jpg);
+
+  }
+
+  .crew-details{
+    padding: 0 2rem;
   }
 }
 
 @media (min-width: 45rem) {
   .crew {
       background-image: url(./assets/crew/background-crew-desktop.jpg);
+
   }
+
+  .crew-details { padding:0;}
 } 
 /* technology */
 .technology {
@@ -659,7 +668,7 @@ body {
   }
 
   .technology-details{
-    padding: 0 4rem;
+    padding: 0 2rem;
   }
 
  
@@ -708,23 +717,27 @@ body {
   }
   
   .grid-container--crew {
-      grid-template-columns: minmax(1rem, 1fr) minmax(0, 37rem) minmax(0, 23rem) minmax(1rem, 1fr);
+      grid-template-columns: minmax(1rem, 1fr) minmax(0, 37rem) minmax(0,37rem) minmax(1rem, 1fr);
       justify-items: start;
+      align-items: start;
       grid-template-areas: 
-          '. title title .'
+          '. title image .'
           '. content image .'
           '. tabs image .';
   }
   
   .grid-container--crew > picture {
-      grid-column: span 2;
       align-self: end;
       max-width: 90%;
+      
   }
 
+  
   .grid-container--technology {
-    grid-template-columns: minmax(1rem, 1fr) minmax(0,8rem) minmax(0, 37rem) minmax(0, 23rem) minmax(1rem, 1fr);
-    align-items:center;
+    margin-top: 4rem;
+    grid-template-columns: minmax(1rem, 1fr) minmax(0,6rem) minmax(0, 37rem)  minmax(0, 23rem) minmax(1rem, 1fr);
+    align-items:start;
+    justify-items: space-between;
     grid-template-areas: 
         '. title title image image'
         '. tabs content image image'
@@ -733,6 +746,8 @@ body {
 
   .number-indicators { 
     flex-direction: column;
+    justify-content: space-between;
+    
   }
 
 }
